<resources>
    <string name="app_name">PlanTrainDoc_v1</string>
    <string name="add_new_goal">Add new goal</string>
    <string name="goal">Goal</string>
    <string name="status_new">New</string>
    <string name="status_inprogress">In Progress</string>
    <string name="status_done">Done</string>
    <string name="status_stopped">Stopped</string>
    <string name="delete">Delete</string>
    <string name="add_training_button">Add Plan</string>
    <string name="train">Train</string>
    <string name="details">Details</string>
    <string name="tv_position">Position</string>
    <string name="plan">Plan</string>
    <string name="save_goal">Save Goal</string>
    <string name="add_goal_hint">Define you goal</string>
    <string name="add_details_hint">Describe the details of your goal</string>
    <string name="do_not_save_goal">Don\'t Save</string>
    <string name="add_training">Add Training Plan</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="discrimination">Discrimination</string>
    <string name="cue_introduction">Cue Introduction</string>
    <string name="other_criterion">Others Criterion</string>
    <string name="time_based">Time Based</string>
    <string name="repetition">Repetitions</string>
    <string name="no_constraint">No Constraints</string>
    <string name="save_plan">Save Plan</string>
    <string name="what_do_i_want_to_train">What do I want to train?</string>
    <string name="how_do_i_want_to_train">How do I want to train?</string>
    <string name="save">Save</string>
    <string name="number">Count</string>
    <string name="seconds">Seconds</string>
    <string name="values">Values</string>
    <string name="discrimination_hint">Comma separated list</string>
    <string name="percentages">Percent</string>
    <string name="plan_verb">Plan</string>
    <string name="criterion">Criterion</string>
    <string name="result">Result</string>
    <string name="no_helper">free</string>
    <string name="click">Click</string>
    <string name="reset">Reset</string>
    <string name="success">Success</string>
    <string name="startTimer">Start Timer</string>
    <string name="comment">Comment</string>
    <string name="welcome">Welcome to PlanTrainDoc</string>
    <string name="welcome_message">You can add your first goal with the \'+\' button in the lower right corner</string>
    <string name="ok">OK</string>
    <string name="congratulation">Congratulations!</string>
    <string name="firstgoal_message">You added your first goal! You can add subgoals by swiping the goal to the left.
    </string>
    <string name="add_new_plan">Add New Plan</string>
    <string name="delete_goal">Delete Goal</string>
    <string name="settings">Settings</string>
    <string name="goals">Goals</string>
    <string name="make_click">use Clicker with sound</string>
    <string name="use_speech">Say criteria</string>
    <string name="remaining">Remaining</string>
    <string name="how_do_i_want_to_train_short">How?</string>
    <string name="what_do_i_want_to_train_short">What?</string>
    <string name="statistics">Statistics</string>
    <string name="clickBarChart">Clicks vs. Resets</string>
    <string name="no_planstats">No Training Plan yet</string>
    <string name="name">Name</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="synchronize">Synchronize</string>
    <string name="useWebServer">Use Web Server</string>
    <string name="ClickerOn">You are now using the clicker with sound</string>
    <string name="ClickerOff">The clicker now works without sound</string>
    <string name="logged_out">You are now logged out</string>
    <string name="Unknown_Error">An unknown error occurred</string>
    <string name="register_success">Successfully registered, you can now log in</string>
    <string name="SpeechOn">Voice Output for criteria on</string>
    <string name="SpeechOff">Voice output for Criteria off</string>
    <string name="no_training">No Training for this goal yet</string>
    <string name="trend">Trend</string>
    <string name="total_clicks">Total Clicks</string>
    <string name="total_trend">Total Trend</string>
    <string name="training">Training</string>
    <string name="build_from_server">Build from Server</string>
    <string name="useLightGate">Use Light Gate</string>
    <string name="paired">Paired Devices</string>
    <string name="cancel">Cancel</string>
    <string name="useFeeder">Use Feeder</string>
    <string name="LightGateConnected">You are connected to the Light Gate, ready to train!</string>
    <string name="LightGateNotConnected">You are not connected to the Light Gate</string>
    <string name="FeederConnected">You are connected to the Feeder</string>
    <string name="FeederNotConnected">You are not connected to the Feeder</string>
    <string name="additional_tools">External Tools (BlueTooth)</string>
    <string name="evaluate">Evaluate</string>
    <string name="no_data">No data for this goal</string>
    <string name="add_youtube_hint">URL of YouTube video</string>
    <string name="no_video_for_this_goal">No Video for this goal on YouTube</string>
    <string name="goal_video">Goal Video</string>
    <string name="youtube">YouTube</string>
    <string name="WLAN_Tools">External Tools (WLAN)</string>
    <string name="use_PTDCam">use IP Camera</string>
    <string name="ip_camera_stream_url">IP Camera Stream URL</string>
    <string name="preview">Preview</string>
    <string name="no_video_for_this_training">No Video for this Training</string>
    <string name="video">Video</string>
    <string name="use3BClicker">Use 3BClicker</string>
    <string name="threeBClickerConnected">You are connected to the 3BClicker, ready to train!</string>
    <string name="threeBClickerNotConnected">You are not connected to the 3BClicker</string>

</resources>