<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            app:title="Sound">
        <SwitchPreferenceCompat
                app:key="useClicker"
                app:defaultValue="true"
                app:title="@string/make_click"
                app:summaryOn="@string/ClickerOn"
                app:summaryOff="@string/ClickerOff"/>
        <SwitchPreferenceCompat
                app:key="useSpeechforHelper"
                app:defaultValue="true"
                app:title="@string/use_speech"
                app:summaryOn="@string/SpeechOn"
                app:summaryOff="@string/SpeechOff"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:title="Web Server">
        <SwitchPreferenceCompat
                app:title="@string/useWebServer"
                app:summaryOn="You are logged in and can synchronize"
                app:summaryOff="You are logged out, Synchronisation is off"
                app:defaultValue="false"
                app:key="useWebServer"/>

    </PreferenceCategory>
</PreferenceScreen>