<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SyncServerFragment">

    <TextView
            android:text="@string/goals"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tv_syncGoals"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="46dp" android:layout_marginStart="16dp"
            android:textSize="24sp" app:layout_constraintBottom_toBottomOf="@+id/pb_syncgoals"
            app:layout_constraintTop_toBottomOf="@+id/pb_syncgoals"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pb_syncgoals"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible" tools:layout_editor_absoluteY="28dp" android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/status_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_syncgoals_done"
            app:layout_constraintEnd_toEndOf="@+id/pb_syncgoals"
            app:layout_constraintBottom_toBottomOf="@+id/pb_syncgoals" android:textSize="18sp"
            android:visibility="invisible"/>
    <TextView
            android:text="@string/plan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_syncplans"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="47dp"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/pb_syncplans" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/pb_syncplans"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pb_syncplans"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            android:layout_marginEnd="32dp" android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_syncGoals"/>
    <TextView
            android:text="@string/status_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_syncplans_done"
            app:layout_constraintEnd_toEndOf="@+id/pb_syncplans"
            app:layout_constraintBottom_toBottomOf="@+id/pb_syncplans"
            android:textSize="18sp"
            android:visibility="invisible"/>
    <TextView
            android:text="@string/training"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_synctraining"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="47dp"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/pb_synctraining"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/pb_synctraining"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pb_synctraining"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            android:layout_marginEnd="32dp" android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_syncplans"/>
    <TextView
            android:text="@string/status_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_synctraining_done"
            app:layout_constraintEnd_toEndOf="@+id/pb_synctraining"
            app:layout_constraintBottom_toBottomOf="@+id/pb_synctraining"
            android:textSize="18sp"
            android:visibility="invisible"/>
    <Button
            android:text="@string/synchronize"
            android:backgroundTint="@color/accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>