<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/id_goal_item_card"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="2dp"
        app:cardPreventCornerOverlap="false">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                        android:text="@string/goal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_goal"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_status" android:layout_marginEnd="8dp"/>
                <TextView
                        android:text="@string/details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_details"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_goal"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_stats"
                        app:layout_constraintEnd_toStartOf="@+id/btn_youtube"/>
                <TextView
                        android:text="status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_status"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"/>
                <Button
                        android:text="Action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_action"
                        style="?attr/borderlessButtonStyle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                />
                <Button
                        android:text="@string/evaluate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_stats"
                        app:layout_constraintStart_toStartOf="parent"

                        style="?attr/borderlessButtonStyle" app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/youtube"
                        app:srcCompat="@drawable/yt_logo_rgb_light_small"
                        android:id="@+id/btn_youtube"
                        app:layout_constraintTop_toBottomOf="@id/tv_status"
                        app:layout_constraintBottom_toTopOf="@id/btn_action"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp"
                        android:minHeight="48dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>