<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ShowTrainingFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/constraintLayout">

        <TextView
                android:text="@string/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_goal_for_training"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:text="@string/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_plan_helper"
                app:layout_constraintTop_toBottomOf="@+id/tv_goal_for_training"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_plan_constraint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_goal_for_training"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/constraintLayout2">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_train">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/criterion"
                    android:id="@+id/ti_criterion"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:text="@string/train"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/accent"
                android:id="@+id/btn_train"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:layout_editor_absoluteX="28dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            android:id="@+id/rv_sessionlist"/>
</androidx.constraintlayout.widget.ConstraintLayout>