<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.TrainingFragment">


    <Button
            android:id="@+id/button_click"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/accent"
            android:soundEffectsEnabled="false"
            android:text="@string/click"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/button_reset"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_click" android:backgroundTint="@color/primaryLightColor"/>


    <TextView
            android:id="@+id/result_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_reset" android:layout_marginTop="24dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_textview" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="187dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/linearLayout" android:layout_marginStart="8dp">
            <TextView
                    android:text="Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tv_helper_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tv_helper_info"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="130dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp">
            <TextView
                    android:text="Remaining"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tv_constraint_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tv_constraint_counter"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>